add-bookings спринт 15 правки