@@ -1,6 +1,8 @@
 package ru.practicum.shareit.item;
 
+import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import ru.practicum.shareit.booking.BookingRepository;
 import ru.practicum.shareit.booking.model.Booking;
@@ -14,10 +16,14 @@ import ru.practicum.shareit.item.model.Item;
 import ru.practicum.shareit.user.User;
 import ru.practicum.shareit.user.UserRepository;
 
+import java.time.Clock;
+import java.time.Duration;
+import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ItemServiceImpl implements ItemService {
@@ -26,11 +32,11 @@ public class ItemServiceImpl implements ItemService {
     private final UserRepository userRepo;
     private final BookingRepository bookingRepo;
     private final CommentRepository commentRepo;
+    private final Clock clock;
 
     @Override
     public ItemDto add(Long userId, ItemDto dto) {
-        User owner = userRepo.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User not found: " + userId));
+        User owner = getUserOrThrow(userId);
 
         if (dto.getName() == null || dto.getName().isBlank())
             throw new ValidationException("Item name is required");
@@ -39,17 +45,15 @@ public class ItemServiceImpl implements ItemService {
         if (dto.getAvailable() == null)
             throw new ValidationException("Item availability is required");
 
-        Item item = ItemMapper.fromDto(dto, owner);
+        var item = ItemMapper.fromDto(dto, owner);
         item = repo.save(item);
         return ItemMapper.toDto(item);
     }
 
     @Override
     public ItemDto update(Long userId, Long itemId, ItemDto patch) {
-        User owner = userRepo.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User not found: " + userId));
-        Item item = repo.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Item not found: " + itemId));
+        User owner = getUserOrThrow(userId);
+        Item item = getItemOrThrow(itemId);
 
         if (!item.getOwner().getId().equals(owner.getId()))
             throw new ForbiddenException("Only owner can edit the item");
@@ -72,9 +76,49 @@ public class ItemServiceImpl implements ItemService {
 
     @Override
     public List<ItemDtoWithBookings> getOwnerItems(Long ownerId) {
-        userRepo.findById(ownerId).orElseThrow(() -> new NotFoundException("User not found: " + ownerId));
-        return repo.findAllByOwner_Id(ownerId).stream()
-                .map(i -> toItemDtoWithBookings(i.getId(), ownerId))
+        getUserOrThrow(ownerId);
+
+        List<Item> items = repo.findAllByOwner_Id(ownerId);
+        if (items.isEmpty()) return List.of();
+
+        List<Long> itemIds = items.stream().map(Item::getId).toList();
+        Instant now = Instant.now(clock); // <— INSTANT, не LDT
+
+        var comments = commentRepo.findByItem_IdInOrderByCreatedDesc(itemIds);
+        var commentsByItem = comments.stream()
+                .collect(Collectors.groupingBy(
+                        c -> c.getItem().getId(),
+                        Collectors.mapping(CommentMapper::toDto, Collectors.toList())
+                ));
+
+        var lastBookings = bookingRepo.findByItem_IdInAndStatusAndEndBeforeOrderByEndDesc(
+                itemIds, Booking.Status.APPROVED, now
+        );
+        var lastByItem = lastBookings.stream()
+                .collect(Collectors.toMap(
+                        b -> b.getItem().getId(),
+                        b -> new ItemDtoWithBookings.BookingShort(b.getId(), b.getBooker().getId()),
+                        (existing, ignore) -> existing
+                ));
+
+        var nextBookings = bookingRepo.findByItem_IdInAndStatusAndStartAfterOrderByStartAsc(
+                itemIds, Booking.Status.APPROVED, now
+        );
+        var nextByItem = nextBookings.stream()
+                .collect(Collectors.toMap(
+                        b -> b.getItem().getId(),
+                        b -> new ItemDtoWithBookings.BookingShort(b.getId(), b.getBooker().getId()),
+                        (existing, ignore) -> existing
+                ));
+
+        return items.stream()
+                .map(it -> {
+                    var dto = ItemMapper.toDtoWithBookingsSkeleton(it);
+                    dto.setComments(commentsByItem.getOrDefault(it.getId(), List.of()));
+                    dto.setLastBooking(lastByItem.get(it.getId()));
+                    dto.setNextBooking(nextByItem.get(it.getId()));
+                    return dto;
+                })
                 .collect(Collectors.toList());
     }
 
@@ -86,59 +130,55 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
+    @Transactional
     public CommentDto addComment(Long userId, Long itemId, CommentDto dto) {
-        User user = userRepo.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User not found: " + userId));
-
-        Item item = repo.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Item not found: " + itemId));
-
         if (dto.getText() == null || dto.getText().isBlank()) {
-            throw new ValidationException("Comment text is required");
+            throw new ValidationException("Текст комментария обязателен");
         }
 
-        LocalDateTime now = LocalDateTime.now();
+        Instant now = Instant.now(clock);
 
-        boolean allowed = bookingRepo.existsByItem_IdAndBooker_IdAndStatusAndEndLessThanEqual(
-                itemId, userId, Booking.Status.APPROVED, now);
+        Instant tolerance = now.plus(Duration.ofHours(3));
+
+        boolean allowed =
+                bookingRepo.existsByItem_IdAndBooker_IdAndStatusAndEndLessThanEqual(
+                        itemId, userId, Booking.Status.APPROVED, tolerance)
+                        || bookingRepo.hasFinishedApprovedBooking(itemId, userId);
 
         if (!allowed) {
-            throw new ValidationException("Only users who completed approved booking can comment");
+            log.warn("Comment denied: no finished APPROVED booking (itemId={}, userId={}, now={})",
+                    itemId, userId, now);
+            throw new ValidationException("Оставить комментарий можно только после завершения бронирования");
         }
-        Comment comment = Comment.builder()
-                .text(dto.getText())
-                .item(item)
-                .author(user)
-                .created(LocalDateTime.now())
-                .build();
 
-        comment = commentRepo.save(comment);
-        return CommentMapper.toDto(comment);
+        Item item = getItemOrThrow(itemId);
+        User author = getUserOrThrow(userId);
+        LocalDateTime created = LocalDateTime.now(clock);
+
+        Comment saved = commentRepo.save(CommentMapper.from(dto.getText(), item, author, created));
+        return CommentMapper.toDto(saved);
     }
+
+
+
+
+
 
     @Override
     public ItemDtoWithBookings get(Long itemId, Long requesterId) {
         return toItemDtoWithBookings(itemId, requesterId);
     }
 
-
     private ItemDtoWithBookings toItemDtoWithBookings(Long itemId, Long requesterId) {
-        Item item = repo.findById(itemId)
-                .orElseThrow(() -> new NotFoundException("Item not found: " + itemId));
-
-        ItemDtoWithBookings dto = new ItemDtoWithBookings();
-        dto.setId(item.getId());
-        dto.setName(item.getName());
-        dto.setDescription(item.getDescription());
-        dto.setAvailable(item.getAvailable());
-        dto.setRequestId(item.getRequest());
+        Item item = getItemOrThrow(itemId);
+        var dto = ItemMapper.toDtoWithBookingsSkeleton(item);
 
         var comments = commentRepo.findByItem_IdOrderByCreatedDesc(itemId)
-                .stream().map(CommentMapper::toDto).collect(Collectors.toList());
+                .stream().map(CommentMapper::toDto).toList();
         dto.setComments(comments);
 
         if (item.getOwner().getId().equals(requesterId)) {
-            LocalDateTime now = LocalDateTime.now();
+            Instant now = Instant.now(clock);
 
             bookingRepo.findTop1ByItem_IdAndStatusAndEndBeforeOrderByEndDesc(
                     itemId, Booking.Status.APPROVED, now
@@ -155,7 +195,16 @@ public class ItemServiceImpl implements ItemService {
             dto.setLastBooking(null);
             dto.setNextBooking(null);
         }
-
         return dto;
+    }
+
+    private User getUserOrThrow(Long userId) {
+        return userRepo.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User not found: " + userId));
+    }
+
+    private Item getItemOrThrow(Long itemId) {
+        return repo.findById(itemId)
+                .orElseThrow(() -> new NotFoundException("Item not found: " + itemId));
     }
 }
